--- a/package.json
+++ b/package.json
@@ -5,15 +5,31 @@
   "main": "index.js",
   "scripts": {
     "preinstall": "npx -y only-allow pnpm",
-    "start": "nodemon"
+    "start": "nodemon",
+    "knex:m:d": "knex migrate:latest --env development",
+    "knex:m:p": "knex migrate:latest --env production",
+    "knex:m:r:d": "knex migrate:rollback --env development",
+    "knex:m:r:p": "knex migrate:rollback --env production",
+    "knex:s:m": "knex seed:make --env development",
+    "knex:s:r": "knex seed:run --env development"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-		"@types/node": "^20.12.7",
-		"nodemon": "^3.1.0",
-		"ts-node": "^10.9.2",
-		"typescript": "^5.4.5"
-	}
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.12.7",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "@types/lodash-es": "^4.17.12",
+    "express": "^4.19.2",
+    "knex": "^3.1.0",
+    "lodash-es": "^4.17.21",
+    "pg": "^8.11.5",
+    "tsx": "^4.7.2",
+    "zod": "^3.22.5"
+  }
 }
