--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
     "nodemon": "^3.1.0",
@@ -25,6 +26,7 @@
   },
   "dependencies": {
     "@types/lodash-es": "^4.17.12",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "knex": "^3.1.0",
     "lodash-es": "^4.17.21",
